CSS/style.css
/* ... */
/* Tablets */

@media (min-width:768px) {
    .content {
        padding: 1.5em 1.25%;
        margin-top: 0em;
        float: right;
        width: 83.3333%;
        position: relative;
    }
    .content>.container {
        width: auto;
    }
    .content-item {
        width: 30.3333%;
        /*        margin: 0 1.5% 25px;*/
    }
    .btn-add {
        margin: -65px 0 0 -160px;
    }
}


/* Laptops and Desktops */

@media (min-width:992px) {
    .content {
        padding: 1.5em 1%;
        float: right;
        width: 83.33333333%;
        margin-top: 0em;
        position: relative;
    }
    .content>.container {
        width: auto;
    }
    .content-item {
        width: 23%;
        margin: 0 1% 25px;
    }
    .btn-add {
        margin: -65px 0 0 -160px;
    }
}

